<resources>
    <string name="app_name">Fascinating Feng Shui</string>
    <string name="instructions">Welcome to Fascinating Feng Shui!\nAnswer the following questions to test your knowledge of all things feng shui, then hit \"submit\" to find out your score!</string>
    <string name="student_name">Name</string>
    <string name="question_one">Feng shui is</string>
    <string name="question_one_a">a religion</string>
    <string name="question_one_b">an ancient body of knowledge</string>
    <string name="question_one_c">interior design</string>
    <string name="question_one_d">a decluttering program</string>
    <string name="question_two">Feng shui is the study of the interaction between which two of the following?</string>
    <string name="question_two_a">Light</string>
    <string name="question_two_b">People</string>
    <string name="question_two_c">Herbs</string>
    <string name="question_two_d">The environment</string>
    <string name="question_three">Qi or chi is another word for</string>
    <string name="question_four">Traditional feng shui originated</string>
    <string name="question_four_a">in China more than 3,000 years ago</string>
    <string name="question_four_b">in Berkeley, CA, in 1968</string>
    <string name="question_four_c">in India in 343 BCE</string>
    <string name="question_five">Which of the following is an important concept in feng shui?</string>
    <string name="question_five_a">the study of mirrors</string>
    <string name="question_five_b">the importance of a red door</string>
    <string name="question_five_c">balancing yin and yang</string>
    <string name="question_five_d">placing a cat statue in your window</string>
    <string name="question_six">Would a traditional feng shui practitioner recommend buying a house at the end of a T intersection?</string>
    <string name="question_six_a">Yes</string>
    <string name="question_six_b">No</string>
    <string name="question_seven">Sha qi is the name of the negative energy that comes off of sharp corners and pointed objects.</string>
    <string name="question_seven_a">True</string>
    <string name="question_seven_b">False</string>
    <string name="question_eight">Where would a traditional feng shui practitioner recommend building a house?</string>
    <string name="question_eight_a">Near the front of the lot, so you have a big back yard</string>
    <string name="question_eight_b">Near the back of the lot, so you have an impressive front yard</string>
    <string name="question_eight_c">In the center of the lot</string>
    <string name="submit">submit</string>
</resources>
